PROJECT(QT_GUI_CPP CXX)
# source files

SET(QT_GUI_SRCS
QListWidget_shell.cpp
QPushButton_shell.cpp
QFileIconProvider_shell.cpp
QPaintDevice_shell.cpp
QPicture_shell.cpp
QPixmap_shell.cpp
QImage_shell.cpp
QBitmap_shell.cpp
QStyle_shell.cpp
QStyleOption_shell.cpp
QDesktopWidget_shell.cpp
QMenu_shell.cpp
QAction_shell.cpp
QDropEvent_shell.cpp
QInputContext_shell.cpp
QWidget_shell.cpp
QApplication_shell.cpp
QIcon_shell.cpp
QIconEngine_shell.cpp
QPalette_shell.cpp
QSizePolicy_shell.cpp
QRegion_shell.cpp
QFontMetrics_shell.cpp
QCursor_shell.cpp
QFont_shell.cpp
QClipboard_shell.cpp
QSessionManager_shell.cpp
QPainterPath_shell.cpp
QPainterPath_Element_shell.cpp
QPaintEvent_shell.cpp
QTransform_shell.cpp
QMatrix_shell.cpp
QPainter_shell.cpp
QDragLeaveEvent_shell.cpp
QPolygon_shell.cpp
QInputEvent_shell.cpp
QDragEnterEvent_shell.cpp
QKeyEvent_shell.cpp
QHideEvent_shell.cpp
QWheelEvent_shell.cpp
QMoveEvent_shell.cpp
QActionGroup_shell.cpp
QActionEvent_shell.cpp
QFocusEvent_shell.cpp
QIconEngineV2_shell.cpp
QLine_shell.cpp
QLineF_shell.cpp
QFontInfo_shell.cpp
QStyleHintReturn_shell.cpp
QColor_shell.cpp
QDragMoveEvent_shell.cpp
QStyleOptionMenuItem_shell.cpp
QTabletEvent_shell.cpp
QShowEvent_shell.cpp
QResizeEvent_shell.cpp
QBrush_shell.cpp
QInputMethodEvent_shell.cpp
QContextMenuEvent_shell.cpp
QStyleOptionComplex_shell.cpp
QMouseEvent_shell.cpp
QHelpEvent_shell.cpp
QTextFormat_shell.cpp
QKeySequence_shell.cpp
QCloseEvent_shell.cpp
QGradient_shell.cpp
QTextItem_shell.cpp
QTextOption_shell.cpp
QPolygonF_shell.cpp
QPen_shell.cpp
QTextCharFormat_shell.cpp
QTextListFormat_shell.cpp
QTextTableFormat_shell.cpp
QTextLength_shell.cpp
QTextFrameFormat_shell.cpp
QTextTableCellFormat_shell.cpp
QTextBlockFormat_shell.cpp
QTextImageFormat_shell.cpp
QFrame_shell.cpp
QLabel_shell.cpp
QAbstractButton_shell.cpp
QMovie_shell.cpp
QCheckBox_shell.cpp
QRadioButton_shell.cpp
QToolButton_shell.cpp
QStyleOptionButton_shell.cpp
QStyleOptionToolButton_shell.cpp
QStyleOptionToolBar_shell.cpp
QStyleOptionToolBox_shell.cpp
QStyleOptionToolBoxV2_shell.cpp
QStyleOptionSlider_shell.cpp
QStyleOptionViewItem_shell.cpp
QStyleOptionHeader_shell.cpp
QStyleOptionDockWidget_shell.cpp
QStyleOptionTab_shell.cpp
QButtonGroup_shell.cpp
QLCDNumber_shell.cpp
QAbstractSlider_shell.cpp
QDial_shell.cpp
QSlider_shell.cpp
QScrollBar_shell.cpp
QPaintEngine_shell.cpp
QSpacerItem_shell.cpp
QLayout_shell.cpp
QLayoutItem_shell.cpp
QPaintEngineState_shell.cpp
QBoxLayout_shell.cpp
QHBoxLayout_shell.cpp
QVBoxLayout_shell.cpp
QFormLayout_shell.cpp
QGridLayout_shell.cpp
QStackedLayout_shell.cpp
QAbstractScrollArea_shell.cpp
QAbstractItemDelegate_shell.cpp
QAbstractItemView_shell.cpp
QTreeView_shell.cpp
QTableView_shell.cpp
QListView_shell.cpp
QHeaderView_shell.cpp
QItemSelection_shell.cpp
QItemSelectionModel_shell.cpp
QItemSelectionRange_shell.cpp
QDirModel_shell.cpp
QSplitter_shell.cpp
QSplitterHandle_shell.cpp
QListWidgetItem_shell.cpp
QMainWindow_shell.cpp
QMenuBar_shell.cpp
QToolBar_shell.cpp
QMessageBox_shell.cpp
QDockWidget_shell.cpp
QDialog_shell.cpp
QStatusBar_shell.cpp
QTabWidget_shell.cpp
QTabBar_shell.cpp
QImageIOHandler_shell.cpp
QImageReader_shell.cpp
QTextFrame_iterator_shell.cpp
QTextBlock_iterator_shell.cpp
QPrinter_shell.cpp
QTextLine_shell.cpp
QTextEdit_shell.cpp
QTextCursor_shell.cpp
QTextFrame_shell.cpp
QTextObject_shell.cpp
QTextBlock_shell.cpp
QTextDocument_shell.cpp
QPrinterInfo_shell.cpp
QTextList_shell.cpp
QTextLayout_shell.cpp
QTextBlockUserData_shell.cpp
QTextDocumentFragment_shell.cpp
QTextTable_shell.cpp
QAbstractTextDocumentLayout_shell.cpp
QTextBlockGroup_shell.cpp
QTextObjectInterface_shell.cpp
QTextInlineObject_shell.cpp
QAbstractTextDocumentLayout_PaintContext_shell.cpp
QTextLayout_FormatRange_shell.cpp
QTextFragment_shell.cpp
QTextTableCell_shell.cpp
QPrintEngine_shell.cpp
QStyleOptionTabWidgetFrame_shell.cpp
QComboBox_shell.cpp
QValidator_shell.cpp
QCompleter_shell.cpp
QLineEdit_shell.cpp
QStyleOptionComboBox_shell.cpp
QStyleOptionFrame_shell.cpp
QFileDialog_shell.cpp
QAbstractProxyModel_shell.cpp
)

ADD_LIBRARY(qt_gui_cpp STATIC ${QT_GUI_SRCS})
