CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)

PROJECT(otbm D)


SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin 
	CACHE STRING "Where binaries files go" FORCE)

SET( GLOBAL_DMD_DEFS "-gc -release" )
SET( CMAKE_D_FLAGS "${CMAKE_D_FLAGS} ${GLOBAL_DMD_DEFS}")

ADD_LIBRARY (otbm SHARED src/otbm/parser.d)